@@ -1,3 +1,4 @@
+0.92.5-0 @03/06/2005 17:55:00 UTC@
 0.92.4-0 @02/11/2005 14:20:00 UTC@
 0.92.3-0 @02/10/2005 21:00:00 UTC@
 0.92.2-0 @02/08/2005 16:05:00 UTC@
